# hawaybar

./: LICENSE  README.md  pyproject.toml
hawaybar/: cli.py  sensor.py
